2010-01-03  Robert Millan  <rmh.grub@aybabtu.com>

	* Makefile.am (web-manual): Add `all' as dependency.

2010-01-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* doc/kernel.c (cmain): Add missing cast.

2010-01-01  Robert Millan  <rmh.grub@aybabtu.com>

	* autogen.sh: Use `gnulib-tool' to install gendocs.sh.
	* Makefile.am (web-manual): New target.  Builds a web manual using
	gendocs.sh.
	* configure.ac (AC_PREREQ): Require Autoconf 2.59 or later.

2010-01-01  Robert Millan  <rmh.grub@aybabtu.com>

	Use more standard `doc' directory.

	* docs: Rename to ...
	* doc: ... this.  Update all users.

	* doc/multiboot.texi: Fix an obsolete reference to `docs' directory
	in GRUB distribution.

2010-01-01  Robert Millan  <rmh.grub@aybabtu.com>

	Make ia32 libc unnecessary on amd64.

	* configure.ac (CFLAGS): Move down after the basic gcc tests are
	done.  Add `-nostdlib'.

2009-12-24  Robert Millan  <rmh.grub@aybabtu.com>

	* configure.ac: Bump version to 0.6.96.
	* docs/multiboot.texi: Include `version.texi' instead of hardcoding
	version number.

2009-12-24  Robert Millan  <rmh.grub@aybabtu.com>

	* docs/Makefile.am (EXTRA_DIST): Remove `menu.lst'.

2009-12-24  Robert Millan  <rmh.grub@aybabtu.com>

	* autogen.sh: Workaround Automake requirement for NEWS and README.
	We really should have them, but in practice we never had.  This
	ought not be considered a regression.

2009-12-24  Robert Millan  <rmh.grub@aybabtu.com>

	* BUGS: Remove.
	* INSTALL: Remove.
	* NEWS: Remove.
	* README: Remove.
	* autogen.sh: Adjust automake flags to add generic files such
	as `INSTALL', `depcomp', `install-sh' and `missing'.

2009-12-24  Robert Millan  <rmh.grub@aybabtu.com>

	* docs/multiboot.texi: Bump version number to 0.6.96.

2009-12-24  Robert Millan  <rmh.grub@aybabtu.com>

	* docs/multiboot.texi: Misc editorial changes:

	Avoid using `commercial' as a synonym for `non-free'
	(see http://www.gnu.org/philosophy/words-to-avoid.html#Commercial).
