@@ -1,5 +1,9 @@
 2010-01-03  Robert Millan  <rmh.grub@aybabtu.com>
 
+	* doc/boot.S (MULTIBOOT_HEADER_FLAGS): Redefine using macros.
+
+2010-01-03  Robert Millan  <rmh.grub@aybabtu.com>
+
 	* Makefile.am (web-manual): Add `all' as dependency.
 
 2010-01-02  Vladimir Serbinenko  <phcoder@gmail.com>
